<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="top.haoxu13.testproject.MainActivity">

    <item
        android:id="@+id/action_camera"
        android:orderInCategory="100"
        android:title="@string/action_camera"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_gallery"
        android:orderInCategory="100"
        android:title="@string/action_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_crop"
        android:orderInCategory="100"
        android:title="@string/action_crop"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ocr"
        android:orderInCategory="100"
        android:title="@string/action_ocr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_table"
        android:orderInCategory="100"
        android:title="@string/action_table"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_text"
        android:orderInCategory="100"
        android:title="@string/action_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_binary"
        android:orderInCategory="100"
        android:title="@string/action_binary"
        app:showAsAction="never" />

</menu>
